--- a/PR42.csproj
+++ b/PR42.csproj
@@ -7,11 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Images\" />
+    <None Remove="Images\ic_item.png" />
+    <None Remove="Images\ic_shop.png" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="Images\ic_item.png" />
+    <Resource Include="Images\ic_shop.png" />
   </ItemGroup>
 
 </Project>
